fix wrong color in pre and code elements

--- a/src/assets/styles/_elements.text.css
+++ b/src/assets/styles/_elements.text.css
@@ -138,14 +138,13 @@ var {
 
 code {
     font-size: var(--font-size-smaller);
+}
 
+:not(pre) code {
     @extend %box--inset-small-squished, %box--invert, %box;
 }
 
-pre > code {
-    --box__padding-inline: 0;
-    --box__padding-block: 0;
-}
+
 
 /**
  * Make code selectable
