--- a/src/assets/styles/_objects.box.css
+++ b/src/assets/styles/_objects.box.css
@@ -6,6 +6,10 @@
     @extend %box;
 }
 
+.o-box *:not(.o-box, pre, code) {
+    color: inherit;
+}
+
 
 
 
